-- test: create Tensor class

--- a/tests/notebooks/tensor.ipynb
+++ b/tests/notebooks/tensor.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,20 +492,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "int64"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from enum import Enum\n",
     "\n",
@@ -515,6 +504,21 @@
     "\n",
     "    def __repr__(self):\n",
     "        return self.value\n",
+    "\n",
+    "    def __call__(self, x):\n",
+    "        '''make if callable, uses:\n",
+    "        ```\n",
+    "        >>> dtype.int64(1.7)\n",
+    "        1\n",
+    "        >>> dtype.float64(1)\n",
+    "        1.0\n",
+    "        '''\n",
+    "        if self == dtype.int64:\n",
+    "            return int(x)\n",
+    "        elif self == dtype.float64:\n",
+    "            return float(x)\n",
+    "        else:\n",
+    "            print(f\"Unknown dtype: {self}\")\n",
     "\n",
     "# -- aliasing\n",
     "int64 = dtype.int64\n",
@@ -556,20 +560,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def is_emptylist(l):\n",
     "    '''\n",
@@ -595,7 +588,7 @@
     "\n",
     "def is_numeric(x):\n",
     "    '''\n",
-    "    returns True if x is a numeric type \n",
+    "    takes x and returns True if x is a numeric type \n",
     "    \n",
     "    e.g.\n",
     "\n",
@@ -615,12 +608,104 @@
     "        if isinstance(x, i):\n",
     "            return True\n",
     "    return False\n",
-    "\n"
+    "\n",
+    "def is_inner_numeric(l:list):\n",
+    "    '''\n",
+    "    recursive function that takes a list l and returns True if all the inner elements of l are numeric (depends on is_numeric())\n",
+    "\n",
+    "    e.g.\n",
+    "\n",
+    "    ```\n",
+    "    >>> is_inner_numeric([1,2,3])\n",
+    "    True\n",
+    "    >>> is_inner_numeric([1,2,'a'])\n",
+    "    False\n",
+    "    >>> is_inner_numeric([1,[2,3]])\n",
+    "    True\n",
+    "    >>> is_inner_numeric([1,[2,'a']])\n",
+    "    False\n",
+    "    ```\n",
+    "    '''\n",
+    "    if isinstance(l,list):\n",
+    "        return all(is_inner_numeric(x) for x in l)\n",
+    "    else:\n",
+    "        return is_numeric(l)\n",
+    "    \n",
+    "def check_dlist(l):\n",
+    "    '''makes sure the input is either a numeric or a non empty dlist of numerics, depends on is_inner_numeric() and is_numeric() and is_emptylist()\n",
+    "\n",
+    "    THROW ValueError if the input is not a numeric or a dlist of numerics\n",
+    "    \n",
+    "    '''\n",
+    "    if is_emptylist(l):\n",
+    "        raise ValueError('empty list provided')\n",
+    "    if not is_inner_numeric(l):\n",
+    "        raise ValueError('all elements in the list must be numeric')\n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ##### TESTING #####\n",
+    "# #wont use them will use cast_dtype instead :p\n",
+    "\n",
+    "\n",
+    "# def make_float64(l):\n",
+    "#     '''\n",
+    "#     recursive function that takes a list l and returns a list with all the numeric elements converted to float64\n",
+    "\n",
+    "#     note: this step is after checking if the elements are numeric\n",
+    "    \n",
+    "#     e.g.\n",
+    "\n",
+    "#     ```\n",
+    "#     >>> make_float64([1,2,3])\n",
+    "#     [1.0, 2.0, 3.0]\n",
+    "#     >>> make_float64([1,2])  \n",
+    "#     [1.0, 2.0]\n",
+    "#     >>> make_float64([1,2.0])\n",
+    "#     [1.0, 2.0]\n",
+    "#     >>> make_float64([1,[2,3]])\n",
+    "#     [1.0, [2.0, 3.0]]\n",
+    "#     ```\n",
+    "#     '''\n",
+    "#     if isinstance(l,list):\n",
+    "#         return [make_float64(x) for x in l]\n",
+    "#     else:\n",
+    "#         return float(l)\n",
+    "\n",
+    "# def make_int64(l):\n",
+    "#     '''\n",
+    "#     recursive function that takes a list l and returns a list with all the numeric elements converted to int64\n",
+    "\n",
+    "#     note: this step is after checking if the elements are numeric\n",
+    "    \n",
+    "#     e.g.\n",
+    "\n",
+    "#     ```\n",
+    "#     >>> make_int64([1.0,2.0,3.0])\n",
+    "#     [1, 2, 3]\n",
+    "#     >>> make_int64([1.0,2.0])  \n",
+    "#     [1, 2]\n",
+    "#     >>> make_int64([1.0,2])\n",
+    "#     [1, 2]\n",
+    "#     >>> make_int64([1,[2.0,3.0]])\n",
+    "#     [1, [2, 3]]\n",
+    "#     ```\n",
+    "#     '''\n",
+    "#     if isinstance(l,list):\n",
+    "#         return [make_int64(x) for x in l]\n",
+    "#     else:\n",
+    "#         return int(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,19 +717,36 @@
     "#     cache = {}\n",
     "\n",
     "#     def inner(nested_list):\n",
+    "#\n",
     "#         id_list = id(nested_list)\n",
     "#         if id_list in cache:\n",
     "#             return cache[id_list]\n",
     "#         result = func(nested_list)\n",
     "#         cache[id_list] = result\n",
     "#         return result\n",
-    "\n",
+    "#\n",
     "#     return inner\n",
     "\n",
     "# @memoize_dimensions\n",
     "def infer_dimensions(nested_list):\n",
     "    '''\n",
-    "    recursively infer the dimensions of a nested list and validate uniformity\n",
+    "    recursively infer the dimensions of a nested list and validate uniformity  \n",
+    "\n",
+    "    THROW ERROR IF NOT UNIFORM\n",
+    "\n",
+    "    ```\n",
+    "    >>> infer_dimensions([1,2,3]) #vector\n",
+    "    [3]\n",
+    "    >>> infer_dimensions([1]) #vector\n",
+    "    [1]\n",
+    "    >>> infer_dimensions(1)  #scalar\n",
+    "    []  \n",
+    "    >>> infer_dimensions([[1,2],[3,4]]) #matrix\n",
+    "    [2, 2]  \n",
+    "    >>> infer_dimensions([[[1,2],[3,4]],[[5,6],[7,8]]]) #3D tensor\n",
+    "    [2, 2, 2]  \n",
+    "    >>> infer_dimensions([[[1,2],[3,4]],[[5,6],[7]]]) \n",
+    "    ValueError: Dimension mismatch detected: [[2, 2], [2, 1]]\n",
     "    '''\n",
     "    if isinstance(nested_list, list):\n",
     "        if len(nested_list) == 0: #if empty inner list = dimension 0\n",
@@ -695,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,27 +846,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 2, 2]\n"
+      "Error: Dimension mismatch detected: [[2, 2], [3, 2]]\n"
      ]
     }
    ],
    "source": [
     "try:\n",
-    "    d=infer_dimensions(l5)\n",
+    "    d=infer_dimensions(bad_l4)\n",
     "    print(d)\n",
     "except ValueError as e:\n",
     "    print(\"Error:\", e)\n",
     "# successful test\n",
     "\n",
     "# -- things that are not validated by infer_dimensions\n",
-    "#   - the top level is a list  \n",
+    "#   - the top level is a list  (handled in 1st step by checking the input type)\n",
     "#   - the lowest level is numeric   \n",
     "#   - the list is empty\n",
     "# need to add these checks prior to calling infer_dimensions"
@@ -772,43 +874,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cast_dtype(nested_list, dt: dtype=dtype.float64):\n",
+    "    '''\n",
+    "    recursively cast the elements of a nested list to a given dtype (default is float64)\n",
+    "\n",
+    "    e.g.\n",
+    "    \n",
+    "    ```\n",
+    "    >>> cast_dtype([1,2,3], dtype.float64)\n",
+    "    [1.0, 2.0, 3.0]\n",
+    "    >>> cast_dtype([1,2,3], dtype.int64)\n",
+    "    [1, 2, 3]\n",
+    "    ```\n",
+    "    '''\n",
+    "    if isinstance(nested_list, list):\n",
+    "        return [cast_dtype(sublist, dt) for sublist in nested_list]\n",
+    "    return dt(nested_list)\n",
+    "\n",
+    "\n",
+    "#successful test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_dtype(dt):\n",
+    "    '''\n",
+    "    check if dtype is within the dtype enumerate\n",
+    "\n",
+    "    ```\n",
+    "    >>> check_dtype('int64')\n",
+    "    >>> check_dtype('int32')\n",
+    "    ValueError: Invalid dtype given: int32; Valid dtypes are from ['int64', 'float64'] #so far, under development\n",
+    "    ```\n",
+    "    '''\n",
+    "    if dt not in dtype.__members__.keys():\n",
+    "        raise ValueError(f\"Invalid dtype given: {dtype}; Valid dtypes are from {list(dtype.__members__.keys())}\")\n",
+    "    \n",
+    "    return dtype.__members__[dt]    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[[1.0, 2.0], [3.0, 4.0], [5.0, 6.0], [7.0, 8.0], [9.0, 10.0], [11.0, 12.0]],\n",
-       " [[5.0, 6.0],\n",
-       "  [7.0, 8.0],\n",
-       "  [9.0, 10.0],\n",
-       "  [11.0, 12.0],\n",
-       "  [13.0, 14.0],\n",
-       "  [15.0, 16.0]],\n",
-       " [[9.0, 10.0],\n",
-       "  [11.0, 12.0],\n",
-       "  [13.0, 14.0],\n",
-       "  [15.0, 16.0],\n",
-       "  [17.0, 18.0],\n",
-       "  [19.0, 20.0]]]"
+       "[[[1, 2], [3, 4], [5, 6], [7, 8], [9, 10], [11, 12]],\n",
+       " [[5, 6], [7, 8], [9, 10], [11, 12], [13, 14], [15, 16]],\n",
+       " [[9, 10], [11, 12], [13, 14], [15, 16], [17, 18], [19, 20]]]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def cast_dtype(nested_list, dtype):\n",
-    "    '''\n",
-    "    recursively cast the elements of a nested list to a given dtype\n",
-    "    '''\n",
-    "    if isinstance(nested_list, list):\n",
-    "        return [cast_dtype(sublist, dtype) for sublist in nested_list]\n",
-    "    return dtype(nested_list)\n",
+    "cast_dtype(l4, check_dtype('float64'))\n",
     "\n",
-    "cast_dtype(l4, float)\n",
-    "#successful test"
+    "dt=check_dtype('int64')\n",
+    "cast_dtype(l4, dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate_tensor_input(input_data):\n",
+    "    '''\n",
+    "    The input should be either a numeric or a nested list of numerics (allow for numpy in later versions)\n",
+    "\n",
+    "    When validating the things to check for (in order) are:  \n",
+    "\n",
+    "    1. if the input is a  non-empty list (could be nested) (or numeric): raise ValueError if not -> check_dlist(input_data)    \n",
+    "    2. dimensions of the list (uniformity): raise valueError if not uniform -> infer_dimensions(input_data)  \n",
+    "\n",
+    "    in 1 we are checking for (when non numeric):  \n",
+    "        a. top level is a list   \n",
+    "        b. non-empty list (nor containing empty lists)  \n",
+    "        c. lowest level is numeric    \n",
+    "    '''"
    ]
   }
  ],
