--- a/tests/notebooks/tensor.ipynb
+++ b/tests/notebooks/tensor.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "              '__doc__': None})"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
     "# issubclass(torch.float32, torch.dtype) #this will raise an error, torch.float32 is not a class\n",
     "isinstance(torch.float32, torch.dtype)\n",
     "\n",
-    "torch.dtype.__dict__\n",
+    "# torch.dtype.__dict__\n",
     "# torch.float32.__dict__ #AttributeError: 'torch.dtype' object has no attribute '__dict__'\n",
     "\n",
     "# torch.float32(1) #not callable"
@@ -215,6 +215,30 @@
     "isinstance(torch.tensor([1,2]), torch.Tensor) # True\n",
     "\n",
     "# -- torch.tensor(-) is a function that instanciates an object of type torch.Tensor and returns it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ True,  True,  True, False])"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "t1=torch.tensor([1,2,3,3])\n",
+    "t2=torch.tensor([1.0,2.0,3.0,5])\n",
+    "t1==t2"
    ]
   },
   {
@@ -560,7 +584,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_emptylist(1) #False\n",
+    "# l2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,15 +620,23 @@
     "    True\n",
     "    >>> is_emptylist([1])\n",
     "    False\n",
+    "    >>> is_emptylist(1)  \n",
+    "    False\n",
     "    >>> is_emptylist([[]])\n",
     "    True\n",
     "    >>> is_emptylist([[],[]])  \n",
     "    True\n",
     "    >>> is_emptylist([[],[1]])\n",
     "    True\n",
+    "    >>> is_emptylist([[1,2],[1,2]])\n",
+    "    False\n",
     "    ```\n",
     "    '''\n",
-    "    return all(isinstance(x, list) for x in l)\n",
+    "    if isinstance(l, list):\n",
+    "        if not l:  \n",
+    "            return True\n",
+    "        return any(is_emptylist(x) for x in l)  #recursive call\n",
+    "    return False\n",
     "\n",
     "\n",
     "def is_numeric(x):\n",
@@ -846,6 +899,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_emptylist(bad_l0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [
@@ -948,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +1038,31 @@
     "        a. top level is a list   \n",
     "        b. non-empty list (nor containing empty lists)  \n",
     "        c. lowest level is numeric    \n",
-    "    '''"
+    "    '''\n",
+    "    try:\n",
+    "        check_dlist(input_data)\n",
+    "        dimensions=infer_dimensions(input_data)\n",
+    "        return dimensions #or maybe just assign them in the class\n",
+    "    except ValueError as e:\n",
+    "        print(\"ValueError: InputData\", e)\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ValueError: InputData all elements in the list must be numeric\n"
+     ]
+    }
+   ],
+   "source": [
+    "validate_tensor_input(bad_l6)"
    ]
   }
  ],
