-- test: Tensor class almost done, T and __mul__ left mainly

--- a/tests/notebooks/tensor.ipynb
+++ b/tests/notebooks/tensor.ipynb
@@ -258,19 +258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m scalar\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mtensor(\u001b[38;5;28mint\u001b[39m(\u001b[38;5;241m7.0\u001b[39m))\n\u001b[1;32m      4\u001b[0m scalar\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mtensor(\u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;241m7\u001b[39m))\n\u001b[0;32m----> 5\u001b[0m scalar\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mtensor(\u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mint64(\u001b[38;5;241m7\u001b[39m))\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# scalar=torch.tensor('a') #TypeError: new(): invalid data type 'str'\u001b[39;00m\n\u001b[1;32m      7\u001b[0m scalar\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor(7.)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -278,7 +277,7 @@
     "scalar = torch.tensor(7.)\n",
     "scalar=torch.tensor(int(7.0))\n",
     "scalar=torch.tensor(float(7))\n",
-    "scalar=torch.tensor(np.int64(7))\n",
+    "scalar=torch.tensor(np.int64(7)) #alright\n",
     "# scalar=torch.tensor('a') #TypeError: new(): invalid data type 'str'\n",
     "scalar\n",
     "\n",
@@ -308,6 +307,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# len(scalar)\n",
+    "#TypeError: len() of a 0-d tensor"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -316,18 +325,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m vector\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m1.\u001b[39m,\u001b[38;5;241m2.\u001b[39m,\u001b[38;5;241m3.\u001b[39m])\n\u001b[1;32m      3\u001b[0m vector\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m----> 4\u001b[0m vector\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mtensor(\u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m])) \u001b[38;5;66;03m#works fine :')\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnb of dim:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvector\u001b[38;5;241m.\u001b[39mndim\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m; dim:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvector\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m; size:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvector\u001b[38;5;241m.\u001b[39msize()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nb of dim:1; dim:torch.Size([3]); size:torch.Size([3])\n"
      ]
     }
    ],
@@ -335,7 +340,7 @@
     "vector=torch.tensor([1,2,3])\n",
     "vector=torch.tensor([1.,2.,3.])\n",
     "vector=torch.tensor([1,2,3], dtype=torch.float32)\n",
-    "vector=torch.tensor(np.array([1,2,3])) #works fine :')\n",
+    "# vector=torch.tensor(np.array([1,2,3])) #works fine :')\n",
     "\n",
     "print(f'nb of dim:{vector.ndim}; dim:{vector.shape}; size:{vector.size()}')"
    ]
@@ -1068,6 +1073,236 @@
    ],
    "source": [
     "validate_tensor_input(bad_l6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "\n",
+    "from tensor import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ndim:0; shape:[]; no size function created\n",
+      "ndim:1; shape:[3]; no size function created\n",
+      "ndim:2; shape:[2, 2]; no size function created\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -- testing the tensor class: successful tests (= torch)\n",
+    "scalar=tensor(1)\n",
+    "print(f'ndim:{scalar.ndim}; shape:{scalar.shape}; no size function created')\n",
+    "\n",
+    "vector=tensor([1,2,3])\n",
+    "print(f'ndim:{vector.ndim}; shape:{vector.shape}; no size function created')\n",
+    "\n",
+    "matrix=tensor([[1,2],[3,4]])\n",
+    "print(f'ndim:{matrix.ndim}; shape:{matrix.shape}; no size function created')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# -- successful, reason why dtype default is different is explained in the readme\n",
+    "t1 = tensor([1,2,3])\n",
+    "t1.dtype #by default it is int64 in pytorch, here its float64 \n",
+    "\n",
+    "t2 = tensor([1.0,2])\n",
+    "t2.dtype #by default it is float32 in pytorch here its float64\n",
+    "\n",
+    "t1.requires_grad #by default it is False exactly like in pytorch\n",
+    "\n",
+    "t1.is_leaf #by default it is True exactly like in pytorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# testing different data inputs\n",
+    "\n",
+    "# examples to test\n",
+    "\n",
+    "l0=1\n",
+    "l1=[1,2,3,4]\n",
+    "l2=[[1,2],[3,4]]\n",
+    "l3=[[[1,2],[3,4]],[[5,6],[7,8]]]\n",
+    "l4=[[\n",
+    "        [1,2],[3,4],[5,6],[7,8],[9,10],[11,12]\n",
+    "    ],\n",
+    "    [\n",
+    "        [5,6],[7,8],[9,10],[11,12],[13,14],[15,16]\n",
+    "    ], \n",
+    "    [\n",
+    "        [9,10],[11,12],[13,14],[15,16],[17,18],[19,20]\n",
+    "    ]]\n",
+    "\n",
+    "l5=[\n",
+    "    [\n",
+    "        [\n",
+    "            [1,2],[3,4]\n",
+    "        ],\n",
+    "        [\n",
+    "            [5,6],[7,8]\n",
+    "        ]\n",
+    "    ]\n",
+    "]\n",
+    "\n",
+    "#empty\n",
+    "bad_l0=[]\n",
+    "#same level but one list and one int\n",
+    "bad_l1=[1,[1]] \n",
+    "#non uniform length at same level\n",
+    "bad_l2=[[1,2],[3]]\n",
+    "bad_l3=[[[1,2],[3,4]],[[5,6],[7]]]\n",
+    "bad_l4=[[[1,2],[3,4]],[[5,6],[7,8],[9,10]]]\n",
+    "#not enclosed by list at top level\n",
+    "bad_l5=(1,2)\n",
+    "#lowest level not numeric\n",
+    "bad_l6=[[[1,2],[3,4]],[[5,6],[7,'a']]]\n",
+    "\n",
+    "good_lists=[l0,l1,l2,l3,l4,l5]\n",
+    "bad_lists=[bad_l0,bad_l1,bad_l2,bad_l3,bad_l4,bad_l5,bad_l6]\n",
+    "\n",
+    "# is_numeric(bad_l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "good list: 1\n",
+      "\tndim:0; shape:[]; no size function created\n",
+      "\n",
+      "good list: [1, 2, 3, 4]\n",
+      "\tndim:1; shape:[4]; no size function created\n",
+      "\n",
+      "good list: [[1, 2], [3, 4]]\n",
+      "\tndim:2; shape:[2, 2]; no size function created\n",
+      "\n",
+      "good list: [[[1, 2], [3, 4]], [[5, 6], [7, 8]]]\n",
+      "\tndim:3; shape:[2, 2, 2]; no size function created\n",
+      "\n",
+      "good list: [[[1, 2], [3, 4], [5, 6], [7, 8], [9, 10], [11, 12]], [[5, 6], [7, 8], [9, 10], [11, 12], [13, 14], [15, 16]], [[9, 10], [11, 12], [13, 14], [15, 16], [17, 18], [19, 20]]]\n",
+      "\tndim:3; shape:[3, 6, 2]; no size function created\n",
+      "\n",
+      "good list: [[[[1, 2], [3, 4]], [[5, 6], [7, 8]]]]\n",
+      "\tndim:4; shape:[1, 2, 2, 2]; no size function created\n"
+     ]
+    }
+   ],
+   "source": [
+    "# successful: pytorch tensor\n",
+    "\n",
+    "for i in good_lists:\n",
+    "    print(f'')\n",
+    "    t=tensor(i)\n",
+    "    print(f'good list: {i}\\n\\tndim:{t.ndim}; shape:{t.shape}; no size function created')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ValueError: inputData empty list provided\n",
+      "bad list: Tensor([])\n",
+      "\tndim:0; shape:None; no size function created\n",
+      "\n",
+      "ValueError: inputData dimension mismatch detected: [[], [1]]\n",
+      "bad list: Tensor([float64, [float64]])\n",
+      "\tndim:0; shape:None; no size function created\n",
+      "\n",
+      "ValueError: inputData dimension mismatch detected: [[2], [1]]\n",
+      "bad list: Tensor([[float64, float64], [float64]])\n",
+      "\tndim:0; shape:None; no size function created\n",
+      "\n",
+      "ValueError: inputData dimension mismatch detected: [[2], [1]]\n",
+      "bad list: Tensor([[[float64, float64], [float64, float64]], [[float64, float64], [float64]]])\n",
+      "\tndim:0; shape:None; no size function created\n",
+      "\n",
+      "ValueError: inputData dimension mismatch detected: [[2, 2], [3, 2]]\n",
+      "bad list: Tensor([[[float64, float64], [float64, float64]], [[float64, float64], [float64, float64], [float64, float64]]])\n",
+      "\tndim:0; shape:None; no size function created\n",
+      "\n",
+      "ValueError: inputData all elements in the LIST must be NUMERIC\n",
+      "bad list: Tensor(float64)\n",
+      "\tndim:0; shape:None; no size function created\n",
+      "\n",
+      "ValueError: inputData all elements in the LIST must be NUMERIC\n",
+      "bad list: Tensor([[[float64, float64], [float64, float64]], [[float64, float64], [float64, float64]]])\n",
+      "\tndim:0; shape:None; no size function created\n"
+     ]
+    }
+   ],
+   "source": [
+    "# successful: pytorch behavior\n",
+    "\n",
+    "for i in bad_lists:\n",
+    "    print(f'')\n",
+    "    t=tensor(i)\n",
+    "    print(f'bad list: {t}\\n\\tndim:{t.ndim}; shape:{t.shape}; no size function created')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vec1=tensor([1,2,3])\n",
+    "len(vec1) #3\n",
+    "\n",
+    "scalar1=tensor(1)\n",
+    "# len(scalar1) #error, expected 0D tensor - even in pytorch"
    ]
   }
  ],
