-- vesioning 1.0.0 + Tensor module prototype completed with tests

--- a/tests/notebooks/test.ipynb
+++ b/tests/notebooks/test.ipynb
@@ -62,14 +62,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scalar: Tensor(1.0)\n",
+      "scalar: Tensor(1.0,float64)\n",
       "dimensions:[],ndim:0\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "sys.path.append('..')\n",
+    "sys.path.append('../modules')\n",
     "from tensor import *\n",
     "\n",
     "scalar=tensor(1)\n",
@@ -80,6 +80,74 @@
     "# print('vector:',vector)\n",
     "# print(f'dimensions:{vector.shape},ndim:{vector.ndim}')\n",
     "matrix=tensor([[1,2,3],[4,5,6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[30, 36, 42]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_multiply([1,2,3],[[1,2,3],[4,5,6],[7,8,9]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ValueError: requires_grad.setter, requires_grad must be a boolean\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix.requires_grad=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix.dtype='float64'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tensor([[1, 2, 3], [4, 5, 6]], dtype=int64, requires_grad=False, is_leaf=True)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# matrix.dtype='int32'\n",
+    "matrix.dtype='int64'\n",
+    "matrix"
    ]
   },
   {
