--- a/tests/notebooks/tensor.ipynb
+++ b/tests/notebooks/tensor.ipynb
@@ -858,8 +858,206 @@
     "    * no empty lists  \n",
     "    * the lowest level of the data (has to be numeric), convert by default to float64 using python's `float()` casting function  \n",
     "    * the dimensions are uniform at each level  \n",
-    "\n"
+    "* [ ] compGraph\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CompGraph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(3.0)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.dot([[1,2],[3,4],[5,6]],[[1,2,3],[4,5,6]]) #array([[ 9, 12, 15],[19, 26, 33],[29, 40, 51]])\n",
+    "\n",
+    "l1=[1,2,3]\n",
+    "l2=[3,2,1]\n",
+    "\n",
+    "l1=[[1,2,3],[4,5,6]]\n",
+    "l2=[[3,2,1],[6,5,4]]\n",
+    "\n",
+    "l1=1\n",
+    "l2=2.0\n",
+    "\n",
+    "# all tests are successful, need just to make sure inputs of same dimensions\n",
+    "\n",
+    "nd1=np.array(l1)\n",
+    "nd2=np.array(l2)\n",
+    "\n",
+    "nd1+nd2 #array([4, 4, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Tensor:\n",
+    "    def __init__(self, data, requires_grad=False):\n",
+    "        self.data = data\n",
+    "        self.requires_grad = requires_grad\n",
+    "        self.grad = 0.0 if requires_grad else None\n",
+    "        self.grad_fn = None  # To store the function for backpropagation\n",
+    "        self.is_leaf = True  # By default, tensors are leaves unless created by an operation\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        if not isinstance(other, Tensor):\n",
+    "            other = Tensor(other)\n",
+    "\n",
+    "        result = Tensor(self.data + other.data, requires_grad=self.requires_grad or other.requires_grad)\n",
+    "\n",
+    "        if result.requires_grad:\n",
+    "            result.is_leaf = False\n",
+    "\n",
+    "            def grad_fn(grad):\n",
+    "                return grad, grad\n",
+    "\n",
+    "            result.grad_fn = (grad_fn, self, other)\n",
+    "            print(\"grad_fn=\", grad_fn)\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "    def __mul__(self, other):\n",
+    "        if not isinstance(other, Tensor):\n",
+    "            other = Tensor(other)\n",
+    "\n",
+    "        result = Tensor(self.data * other.data, requires_grad=self.requires_grad or other.requires_grad)\n",
+    "\n",
+    "        if result.requires_grad:\n",
+    "            result.is_leaf = False\n",
+    "\n",
+    "            def grad_fn(grad):\n",
+    "                grad_self = grad * other.data\n",
+    "                grad_other = grad * self.data\n",
+    "                return grad_self, grad_other\n",
+    "\n",
+    "            result.grad_fn = (grad_fn, self, other)\n",
+    "\n",
+    "        return result\n",
+    "    \n",
+    "    def __sub__(self, other):\n",
+    "        if not isinstance(other, Tensor):\n",
+    "            other = Tensor(other)\n",
+    "\n",
+    "        result = Tensor(self.data - other.data, requires_grad=self.requires_grad or other.requires_grad)\n",
+    "        result.is_leaf = False\n",
+    "        result.parents = [self, other]\n",
+    "\n",
+    "        def grad_fn(grad):\n",
+    "            grad_self = grad\n",
+    "            grad_other = -grad\n",
+    "            return grad_self, grad_other\n",
+    "\n",
+    "        result.grad_fn = (grad_fn, self, other)\n",
+    "        return result\n",
+    "\n",
+    "    def __truediv__(self, other):\n",
+    "        if not isinstance(other, Tensor):\n",
+    "            other = Tensor(other)\n",
+    "\n",
+    "        result = Tensor(self.data / other.data, requires_grad=self.requires_grad or other.requires_grad)\n",
+    "        result.is_leaf = False\n",
+    "        result.parents = [self, other]\n",
+    "\n",
+    "        def grad_fn(grad):\n",
+    "            grad_self = grad / other.data\n",
+    "            grad_other = -grad * self.data / (other.data ** 2)\n",
+    "            return grad_self, grad_other\n",
+    "\n",
+    "        result.grad_fn = (grad_fn, self, other)\n",
+    "        return result\n",
+    "\n",
+    "\n",
+    "    def backward(self, grad=1.0):\n",
+    "        if not self.requires_grad:\n",
+    "            return\n",
+    "\n",
+    "        # Accumulate gradient\n",
+    "        if self.grad is None:\n",
+    "            self.grad = grad\n",
+    "        else:\n",
+    "            self.grad += grad\n",
+    "\n",
+    "        # If this is a non-leaf node, propagate gradients further\n",
+    "        if self.grad_fn:\n",
+    "            grad_fn, *parents = self.grad_fn\n",
+    "            parent_grads = grad_fn(grad)\n",
+    "\n",
+    "            for parent, parent_grad in zip(parents, parent_grads):\n",
+    "                parent.backward(parent_grad)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Tensor(data={self.data}, requires_grad={self.requires_grad}, grad={self.grad})\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "grad_fn= <function Tensor.__add__.<locals>.grad_fn at 0x7f4ed2cf2f20>\n",
+      "grad_fn= <function Tensor.__add__.<locals>.grad_fn at 0x7f4ed237c220>\n",
+      "a: Tensor(data=2.0, requires_grad=True, grad=2.0)\n",
+      "b: Tensor(data=1.0, requires_grad=True, grad=5.0)\n",
+      "e: Tensor(data=6.0, requires_grad=True, grad=1.0)\n",
+      "Gradient of a: 2.0\n",
+      "Gradient of b: 5.0\n",
+      "1.0\n",
+      "(<function Tensor.__mul__.<locals>.grad_fn at 0x7f4ed237c2c0>, Tensor(data=3.0, requires_grad=True, grad=2.0), Tensor(data=2.0, requires_grad=True, grad=3.0))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define tensors\n",
+    "a = Tensor(2.0, requires_grad=True)\n",
+    "b = Tensor(1.0, requires_grad=True)\n",
+    "\n",
+    "# Perform operations\n",
+    "e = (a + b) * (b + 1)\n",
+    "\n",
+    "# Backpropagate\n",
+    "e.backward()\n",
+    "\n",
+    "# Print results\n",
+    "print(\"a:\", a)  # Should show a's data and gradient\n",
+    "print(\"b:\", b)  # Should show b's data and gradient\n",
+    "print(\"e:\", e)  # Should show e's data\n",
+    "print(\"Gradient of a:\", a.grad)  # Expected: 2.0\n",
+    "print(\"Gradient of b:\", b.grad)  # Expected: 5.0\n",
+    "print(e.grad)\n",
+    "print(e.grad_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
